--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -1,12 +1,11 @@
 #!/usr/bin/env groovy
 import groovy.json.*
 
-    
     def CURRENT_PROJECT_PATH = 'E2E/Strata-eBiz'
     def CONFIG_FILE_ID = '16d93a3a-a4a4-4764-9cb5-231f80e7261f';
-    def CONFIG_FILE_DESTINATION = '${CURRENT_PROJECT_PATH}/cypress/fixtures/environment/environments.json';
-    def TEST_RAIL_CONFIG-FILE_PATH = '${CURRENT_PROJECT_PATH}/cypress.env.json';
-    
+    def CONFIG_FILE_DESTINATION = 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json';
+    def TEST_RAIL_CONFIG_FILE_PATH = 'E2E/Strata-eBiz/cypress.env.json';
+    def FAIED_SCENAROS_FILE_PATH = 'E2E/Strata-eBiz/cypress/reports/run-info/failed-scenarios-title.txt'
     
     pipeline {
     agent {
@@ -38,7 +37,7 @@ import groovy.json.*
                         def username = "${USERNAME}"
                         def password = "${PASSWORD}"
                         def runId = "R5383"
-                        def reporterConfig = readJSON file: TEST_RAIL_CONFIG-FILE_PATH
+                        def reporterConfig = readJSON file: TEST_RAIL_CONFIG_FILE_PATH
                         def testrail = [
                             'domain': (domain),
                             'username': (username),
@@ -48,9 +47,9 @@ import groovy.json.*
                         reporterConfig.put("testrail", testrail)
                         def json = JsonOutput.toJson(reporterConfig)
                         json = JsonOutput.prettyPrint(json)
-                        writeFile(file: TEST_RAIL_CONFIG-FILE_PATH, text: json)
+                        writeFile(file: TEST_RAIL_CONFIG_FILE_PATH, text: json)
 
-                       def reporterConfig1 = readJSON file: TEST_RAIL_CONFIG-FILE_PATH
+                       def reporterConfig1 = readJSON file: TEST_RAIL_CONFIG_FILE_PATH
                         testrail = [
                             'domain': reporterConfig1.testrail.domain,
                             'username': reporterConfig1.testrail.username.values[0],
@@ -60,7 +59,7 @@ import groovy.json.*
                         reporterConfig.put("testrail", testrail)
                         json = JsonOutput.toJson(reporterConfig)
                         json = JsonOutput.prettyPrint(json)
-                        writeFile(file: TEST_RAIL_CONFIG-FILE_PATH, text: json)
+                        writeFile(file: TEST_RAIL_CONFIG_FILE_PATH, text: json)
                     }
                 }
             }
@@ -77,7 +76,7 @@ import groovy.json.*
             script {
 
                 // Teardown cypress.env.json and environments.json files
-                def reporterConfig = readJSON file: TEST_RAIL_CONFIG-FILE_PATH
+                def reporterConfig = readJSON file: TEST_RAIL_CONFIG_FILE_PATH
                 def testrail = [
                     'domain': '-',
                     'username': '-',
@@ -87,11 +86,11 @@ import groovy.json.*
                 reporterConfig.put("testrail", testrail)
                 def json = JsonOutput.toJson(reporterConfig)
                 json = JsonOutput.prettyPrint(json)
-                writeFile(file: TEST_RAIL_CONFIG-FILE_PATH, text: json)
+                writeFile(file: TEST_RAIL_CONFIG_FILE_PATH, text: json)
                 writeFile(file: CONFIG_FILE_DESTINATION, text: json)
 
                 // Copy paste failed scenarios from failed-scenarios-title.txt into email
-                def fileContent = readFile(file: '${CURRENT_PROJECT_PATH}/cypress/reports/run-info/failed-scenarios-title.txt').trim()
+                def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim()
                 def lines = fileContent.readLines()
                 def formattedContent = '<br><br>' + lines.join('<br>')
 
@@ -121,7 +120,7 @@ import groovy.json.*
         }
         failure{
                 script {
-                    def fileContent = readFile(file: '${CURRENT_PROJECT_PATH}/cypress/reports/run-info/failed-scenarios-title.txt').trim()
+                    def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim()
                     def lines = fileContent.readLines()
                     def formattedContent = '<br><br>' + lines.join('<br>')
                 // mail(
