--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -5,7 +5,7 @@ import groovy.json.*
     def CONFIG_FILE_ID = '16d93a3a-a4a4-4764-9cb5-231f80e7261f';
     def CONFIG_FILE_DESTINATION = 'E2E/Strata-eBiz/cypress/fixtures/environment/environments.json';
     def TEST_RAIL_CONFIG_FILE_PATH = 'E2E/Strata-eBiz/cypress.env.json';
-    def FAIED_SCENAROS_FILE_PATH = 'E2E/Strata-eBiz/cypress/reports/run-info/failed-scenarios-title.txt'
+    def FAIED_SCENAROS_FILE_PATH = 'E2E/Strata-eBiz/cypress/reports/run-info/failed-scenarios-title.txt';
     
     pipeline {
     agent {
@@ -106,14 +106,14 @@ import groovy.json.*
             publishHTML(target : [allowMissing: true,
                 alwaysLinkToLastBuild: true,
                 keepAll: true,
-                reportDir: '${CURRENT_PROJECT_PATH}/cypress/reports',
+                reportDir: 'E2E/Strata-eBiz/cypress/reports',
                 reportFiles: 'cucumber-reports/cucumber-html-report/index.html',
                 reportName: 'Cucumber Report',
                 reportTitles: 'Cucumber Report'])
             publishHTML(target : [allowMissing: true,
                 alwaysLinkToLastBuild: true,
                 keepAll: true,
-                reportDir: '${CURRENT_PROJECT_PATH}/cypress/reports',
+                reportDir: 'E2E/Strata-eBiz/cypress/reports',
                 reportFiles: 'multi-html-report/index.html',
                 reportName: 'Multi HTML Report',
                 reportTitles: 'Multi HTML Report'])
