--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -93,12 +93,12 @@ import groovy.json.*
                 def lines = fileContent.readLines();
                 def formattedContent = '<br><br>' + lines.join('<br>');
 
-                // mail(
-                //     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                //     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
-                //     to: read_config_file(CONFIG_FILE_ID).qaTeamEmail, 
-                //     mimeType: 'text/html'
-                // );
+                mail(
+                    subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
+                    to: read_config_file(CONFIG_FILE_ID).qaTeamEmail, 
+                    mimeType: 'text/html'
+                );
 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
@@ -122,12 +122,12 @@ import groovy.json.*
                     def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
                     def lines = fileContent.readLines();
                     def formattedContent = '<br><br>' + lines.join('<br>');
-                // mail(
-                //     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                //     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
-                //     to: read_config_file(CONFIG_FILE_ID).strataEBizTeamEmail, 
-                //     mimeType: 'text/html'
-                // );
+                mail(
+                    subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
+                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
+                    to: read_config_file(CONFIG_FILE_ID).strataEBizTeamEmail, 
+                    mimeType: 'text/html'
+                );
             }
         }
     }
@@ -139,11 +139,11 @@ import groovy.json.*
       [@return] values of Jenkins config file
      */ 
     def read_config_file(String configFileId){
-            configFileProvider([configFile(fileId: configFileId, variable: 'configFile')]) {
+        configFileProvider([configFile(fileId: configFileId, variable: 'configFile')]) {
             def fileContent = readFile configFile;
             def jsonFileContent = readJSON text: fileContent;
             return jsonFileContent;
-            } 
+        } 
     }
 
      /*
@@ -152,12 +152,12 @@ import groovy.json.*
       [@param] destinationFilePath: destination file path
      */ 
     def inject_config_file(String configFileId, String destinationFilePath){
-                configFileProvider([configFile(fileId: configFileId, variable: 'configFile')]) {
-                    def fileContent = readFile configFile;
-                    def jsonFileContent = readJSON text: fileContent;
-                    def json = JsonOutput.toJson(jsonFileContent);
-                    json = JsonOutput.prettyPrint(json);
-                    writeFile(file: destinationFilePath, text: json);
-                }
-            } 
+        configFileProvider([configFile(fileId: configFileId, variable: 'configFile')]) {
+            def fileContent = readFile configFile;
+            def jsonFileContent = readJSON text: fileContent;
+            def json = JsonOutput.toJson(jsonFileContent);
+            json = JsonOutput.prettyPrint(json);
+            writeFile(file: destinationFilePath, text: json);
+        }
+    } 
     
