--- a/E2E/SBMS/configuration.properties
+++ b/E2E/SBMS/configuration.properties
@@ -1,10 +1,11 @@
-SBMS_Path=C:\\CypressAutomation\\EDP_CypressAutomation\\E2E\\SBMS\\Desktop\\SBMSNET1.EXE
+SBMS_Path=C:\\SBMS\\SBMSNET_Eleven_QA\\SBMSNET.EXE
 #SBMS_Path=Y:\SBMSNET_Eleven_QA\\SBMSNET.EXE
 WinAppDriver_Path=C:\\Program Files (x86)\\Windows Application Driver\\WinAppDriver.exe
-#SBMS_Page=\u0020SBMS for Spot - [Schedule Status]
+SBMS_Page=\u0020SBMS for Spot
 #SBMS_Page=\u0020SBMS for Spot
 Close_SBMS=Yes
-SBMS_Page=\u0020SBMS for Spot - [Schedule Status]
+#SBMS_Page=\u0020SBMS for Spot - [Schedule Status]
 # Name	 SBMS for Spot - [Estimate Information]
 # 	SBMS for Spot - [Estimate Information - Estimate Goals]
 # SBMS for Spot - [Scheduling]
+
