Added hamburger button handler

--- a/E2E/ARFP-Stratasphere/.vscode/settings.json
+++ b/E2E/ARFP-Stratasphere/.vscode/settings.json
@@ -10,8 +10,9 @@
     ],
     "cucumberautocomplete.syncfeatures": "cypress/integration/step-definitions/**/*.feature",
     "cSpell.words": [
-        "Mailinator",
-        "ssphere",
+        "badeball",
         "mailinator",
+        "Mailinator",
+        "ssphere"
     ]
 }
