Updated Jenkins file

--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -97,7 +97,7 @@ import groovy.json.*
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
                     to: read_config_file(CONFIG_FILE_ID).strataEBizTeamEmail,
-                    cc: read_config_file(CONFIG_FILE_ID).qaTeamEmail 
+                    cc: read_config_file(CONFIG_FILE_ID).qaTeamEmail, 
                     mimeType: 'text/html'
                 );
 
@@ -127,7 +127,7 @@ import groovy.json.*
                     subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
                     body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
                     to: read_config_file(CONFIG_FILE_ID).strataEBizTeamEmail,
-                    cc: read_config_file(CONFIG_FILE_ID).qaTeamEmail
+                    cc: read_config_file(CONFIG_FILE_ID).qaTeamEmail,
                     mimeType: 'text/html'
                 );
             }
