--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -88,18 +88,7 @@ import groovy.json.*
                 writeFile(file: TEST_RAIL_CONFIG_FILE_PATH, text: json);
                 writeFile(file: CONFIG_FILE_DESTINATION, text: json);
 
-                // Copy paste failed scenarios from failed-scenarios-title.txt into email
-                def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
-                def lines = fileContent.readLines();
-                def formattedContent = '<br><br>' + lines.join('<br>');
-
-                mail(
-                    subject: "${currentBuild.currentResult}: '${env.JOB_NAME}' (${env.BUILD_NUMBER})",
-                    body: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}",
-                    to: read_config_file(CONFIG_FILE_ID).strataEBizTeamEmail,
-                    cc: read_config_file(CONFIG_FILE_ID).qaTeamEmail, 
-                    mimeType: 'text/html'
-                );
+                notifySlack(slackChannel, currentBuild.currentResult)
 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
